CSS Flicker Fix
Backface visibility rule added to both player containers

--- a/_assets/_css/main.css
+++ b/_assets/_css/main.css
@@ -50,6 +50,12 @@
 		z-index: 0;
 	}
 	
+	.tweenFlickerFix div
+	{
+		-webkit-backface-visibility	: hidden;
+		backface-visibility			: hidden;		
+	}
+	
 	/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! USE */
 	
 	.pixels_battleNav-player
